fixed alignment

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -5,7 +5,7 @@
     -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09); //used box shadow generator online
     -moz-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
     box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
-    border-radius: 15px;
+    border-radius: 20 px;
     background-color: themed("bg");
     color: themed("textColor");
 
@@ -29,22 +29,21 @@
           .details {
             display: flex;
             flex-direction: column;
-          }
-
-          .name {
-            font-weight: 500;
-          }
-
-          .date {
-            font-size: 12px;
+            
+            .name {
+              font-weight: 500;
+            }
+            
+            .date {
+              font-size: 12px;
+            }
           }
         }
       }
 
       .content {
-        margin: 20px 0;
-        p {
-        }
+        margin: 20px 0px;
+        
 
         img {
           width: 100%;
