--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,7 +3,7 @@
 .profile {
   @include themify($themes) {
     background-color: themed("bgSoft");
-    
+
     .images {
       width: 100%;
       height: 300px;
@@ -29,13 +29,13 @@
     .profileContainer {
       padding: 20px 70px;
 
-      @include mobile{
-        padding:10px;
+      @include mobile {
+        padding: 10px;
       }
 
-      @include tablet{
+      @include tablet {
         padding: 20px;
-       } 
+      }
 
       .userInfo {
         height: 180px;
@@ -51,8 +51,8 @@
         justify-content: space-between;
         margin-bottom: 20px;
 
-        @include mobile{
-          flex-direction: column ;
+        @include mobile {
+          flex-direction: column;
           padding: 20px;
           height: 30vh;
           margin-top: 100px;
@@ -62,14 +62,14 @@
           flex: 1;
           display: flex;
           gap: 10px;
-          
-          @include tablet{
+          flex-wrap: wrap;
+
+          @include tablet {
             flex-wrap: wrap;
           }
-          a{
+          a {
             color: themed("textColorSoft");
           }
-
         }
         .center {
           flex: 1;
@@ -79,7 +79,7 @@
           gap: 10px;
 
           span {
-            font-size: 30px;
+            font-size: 20px;
             font-weight: 550;
           }
           .info {
@@ -88,24 +88,24 @@
             align-items: center;
             justify-content: space-between;
 
-            .item { 
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                color: themed("textColorSoft");
+            .item {
+              display: flex;
+              align-items: center;
+              gap: 5px;
+              color: themed("textColorSoft");
 
               span {
                 font-size: 15px;
               }
             }
-        }
-            button{
-                border: none;
-                background-color: #5271ff;
-                padding: 10px 20px;
-                color: white;
-                border-radius: 5px;
-                cursor: pointer;
+          }
+          button {
+            border: none;
+            background-color: #5271ff;
+            padding: 10px 20px;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
           }
         }
         .right {
